--- a/frontend/src/app/components/objects/objects.component.html
+++ b/frontend/src/app/components/objects/objects.component.html
@@ -273,7 +273,7 @@
         <td>{{object.realPropertyId}}</td>
         <td><img *ngIf="getImgUrl(object)" [src]="getImgUrl(object)" alt="First Slide" class="photoList"
                  height="150px" width="220px"></td>
-        <td>{{getDicNameByLanguage(object, 'objectTypeId')}}</td>
+        <td>{{getDicNameByLanguage(object, 'objectType')}}</td>
         <td style="color: #00b2a8">{{object.address.nameRu}}</td>
         <td>{{object.objectPrice}}</td>
         <td>{{object.numberOfRooms}}</td>
