--- a/frontend/src/app/components/profile/profile.component.scss
+++ b/frontend/src/app/components/profile/profile.component.scss
@@ -169,7 +169,7 @@
   border: none;
 }
 
-.panel-header:active,.panel-header:focus,.panel-header:hover, .nav-tabs .nav-link.active, .nav-item.show .nav-link, .badge:active {
+.panel-header:active,.panel-header:focus, .nav-tabs .nav-link.active, .nav-item.show .nav-link, .badge:active {
   color: #00b2a8!important;
   border-bottom: 2px solid #00b2a8;
 }
@@ -190,7 +190,7 @@ table thead {
 table tbody {
   width: 149px;
   height: 35px;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 500;
   font-stretch: normal;
   font-style: normal;
