--- a/frontend/src/app/components/claims/create-claim/claim-view/claim-view.component.html
+++ b/frontend/src/app/components/claims/create-claim/claim-view/claim-view.component.html
@@ -38,7 +38,7 @@
             </div>
           </div>
 
-          <div class="row" [hidden]="hasShowGroup(['CHOOSE_GROUP_AGENT', 'CHOOSE_ANY_AGENT'])">
+          <div class="row">
             <div class="col-sm">
               <input type="text" class="form-control text-uppercase" readonly [value]="agentFullName"/>
             </div>
