--- a/frontend/src/app/components/profile/my-objects/my-objects.component.html
+++ b/frontend/src/app/components/profile/my-objects/my-objects.component.html
@@ -39,7 +39,7 @@
         </td>
         <td>{{getName(object.encumbrance)}}</td>
         <td>{{object.priceAnalytics}}</td>
-        <td>{{object.contactsOfAgent | mask: '(000) 000-0000'}}</td>
+        <td>{{object.contactsOfAgent | mask: '+0 (000) 000-0000'}}</td>
       </tr>
       </tbody>
     </table>
