--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -72,7 +72,7 @@
         <table style="width:100%;">
           <tr>
             <th class="table-column-header">Группа продажи:</th>
-            <td class="table-column-value">Руководитель Рамеева Динара</td>
+            <td class="table-column-value text-uppercase">{{rgName}}</td>
           </tr>
           <tr>
             <th class="table-column-header">Рабочее состояние:</th>
