--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -16,7 +16,8 @@
       <a href="#" class="list-group-item list-group-item-action bg-dark" routerLink="/claims" translate>claim.title</a>
       <a href="#" class="list-group-item list-group-item-action bg-dark" routerLink="/staffs" translate>staffs.title</a>
       <a href="#" class="list-group-item list-group-item-action bg-dark" routerLink="/dic-control" translate>Управление
-        справочниками</a>
+        справочниками</a>  <a href="#" class="list-group-item list-group-item-action bg-dark" routerLink="/organizations" translate>Управление
+        организациями</a>
     </div>
   </div>
   <div id="page-content-wrapper" class="page-content-wrapper">
