--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -7,7 +7,7 @@
             <div class="col-sm">
               <div class="card card-agent">
                 <div class="view overlay">
-                  <img class="card-img-top" src="assets/images/home/2.jpg"
+                  <img class="card-img-top" [src]="jpg2"
                        alt="Card image cap">
                 </div>
                 <div class="card-body">
@@ -19,7 +19,7 @@
             <div class="col-sm">
               <div class="card card-agent">
                 <div class="view overlay">
-                  <img class="card-img-top" src="assets/images/home/3.jpg"
+                  <img class="card-img-top" [src]="jpg3"
                        alt="Card image cap">
                 </div>
                 <div class="card-body">
@@ -31,7 +31,7 @@
             <div class="col-sm">
               <div class="card card-agent">
                 <div class="view overlay">
-                  <img class="card-img-top" src="assets/images/home/1.jpg"
+                  <img class="card-img-top" [src]="jpg1"
                        alt="Card image cap">
                 </div>
                 <div class="card-body">
