--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -3,7 +3,7 @@
     <div class="container-sm my-5 py-5 main-section-block">
 
       <div class="row">
-        <img src="assets/images/logo2.png" style="margin: 0 auto; max-width: 11.75rem; max-height: 10.25rem"/>
+        <img src="{{logo2}}" style="margin: 0 auto; max-width: 11.75rem; max-height: 10.25rem"/>
       </div>
       <div class="row" [formGroup]="loginForm">
         <div class="col">
