--- a/frontend/src/app/components/login/login.component.scss
+++ b/frontend/src/app/components/login/login.component.scss
@@ -9,7 +9,7 @@ html, body, app-root {
   position: fixed;
   min-width: 100%;
   min-height: 100%;
-  background-image: url("src/assets/images/2307.jpg");
+  background-image: url("~src/assets/images/2307.jpg");
   background-repeat: no-repeat;
   background-size: 1920px 1080px;
   background-position: center;
