--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -147,7 +147,7 @@ body {
 
 fieldset {
   margin: 5px;
-  xmin-width: 0;
+  min-width: 0;
   padding: 10px;
   position: relative;
   border-radius: 4px;
