--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -13,7 +13,7 @@
                aria-controls="contractOU" (click)="changeTab('ou')"
                aria-selected="false" >Договор ОУ</a>
           </li>
-          <li class="nav-item" *ngIf="this.applicationId && isSell()">
+          <li class="nav-item" *ngIf="this.applicationId && isSell()" [class.disabled]="isShowAdvanceAgreement()">
             <a class="nav-link" [ngClass]="{ 'active':activeTab === 'advanceAgreement' || activeTab === 'depositAgreement'}" id="advanceAgreement-tab" data-toggle="tab" href="#advanceAgreement" role="tab"
                aria-controls="advanceAgreement" (click)="openModal2(modalContentAdvance);"
                aria-selected="false" >Соглашение {{activeTab === 'advanceAgreement' ? 'Аванса' : ''}} {{activeTab === 'depositAgreement' ? 'Задатка':''}}</a>
