--- a/frontend/src/app/components/board/board.component.html
+++ b/frontend/src/app/components/board/board.component.html
@@ -234,7 +234,7 @@
         </textarea>
       </div>
     </div>
-    <div class="row" *ngIf="!util.hasShowApplicationGroup('CLOSE_APPLICATION', roles)">
+    <div class="row" *ngIf="!util.hasShowApplicationGroup('CLOSE_APPLICATION', roles) && objectData?.status?.code === '002011'">
       <div class="col-sm">
         <label class="btn btn-info btn-sm mr-4">Документ подтверждающий завершение сделки
           <i class="fa fa-upload"></i>
@@ -350,7 +350,7 @@
       </div>
     </div>
     <div class="row text-right"
-         *ngIf="(!util.hasShowAgentGroup('CHOOSE_GROUP_AGENT', roles) || (!util.hasShowApplicationGroup('CLOSE_APPLICATION', roles)) && objectData?.status?.code === '002012') && isConfirmDeal">
+         *ngIf="(!util.hasShowAgentGroup('CHOOSE_GROUP_AGENT', roles) || (!util.hasShowApplicationGroup('CLOSE_APPLICATION', roles)) && objectData?.status?.code === '002011') && isConfirmDeal">
       <div class="col-sm">
         <button type="button" class="btn btn-sm btn-btn btn2 btn-secondary" (click)="confirmDeal(false)">
           Отказать в завершении
