--- a/frontend/src/app/components/home/calendar/calendar.component.scss
+++ b/frontend/src/app/components/home/calendar/calendar.component.scss
@@ -1,8 +1,92 @@
-h3 {
-  margin: 0 0 10px;
+.month-block-div {
+  font-size: 18px;
+  margin: 0 auto;
+  font-stretch: normal;
+  font-style: normal;
+  letter-spacing: normal;
+  color: #454545;
+  font-weight: bold;
+  margin: 0 -35px;
+  text-align: center;
 }
 
-pre {
-  background-color: #f5f5f5;
-  padding: 15px;
+.list-group-item {
+  border: none;
+  color: #454545;
+}
+
+@function grey($opacity) {
+  @return rgba(140, 140, 140, $opacity)
+}
+
+//.list-group-item:hover {
+//  background: grey(0.1);
+//}
+
+.main-month-name {
+  height: 20px;
+  font-size: 22px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 0.36;
+  letter-spacing: normal;
+  text-align: left;
+  color: #373737;
+}
+
+@function orange($opacity) {
+  @return rgba(240, 209, 115, $opacity)
+}
+
+.to-do-month {
+  background: orange(0.7);
+}
+
+.to-do-title {
+  font-size: 22px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 0.36;
+  letter-spacing: normal;
+  text-align: left;
+  color: #373737;
+}
+
+.month-block {
+  min-height: 550px;
+  max-height: 550px;
+  box-shadow: 0 0 2.9px 0.1px rgba(0, 0, 0, 0.25);
+  width: 291px;
+}
+
+.mwl-calendar-month-cell {
+  border: none !important;
+}
+
+.cal-cell .cal-day-cell .cal-future .cal-in-month .ng-star-inserted {
+  max-height: 60px!important;
+  text-align: center;
+  border: red!important;
+}
+
+.disabled-date{
+  opacity: .5;
+  background-color: #0074D9!important;
+  pointer-events: none;
+}
+
+.cal-month-view .cal-day-badge {
+  width: 8px;
+  height: 12px;
+  font-size: 13px;
+  font-weight: 500;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 4.92;
+  letter-spacing: normal;
+  text-align: right;
+  color: #373737;
+  background-color: green!important;
 }
